--- a/css/style.css
+++ b/css/style.css
@@ -393,14 +393,14 @@ header {
 }
 
 .home-intro {
-  overflow-x: hidden;
-  width: fit-content;
   position: relative;
+  inset: 0;
+  text-align: center;
 }
 
 .home-intro p {
   position: absolute;
-  top: 50%;
+  top: 48%;
   left: 50vw;
   z-index: 20;
   transform: translateX(-50%);
@@ -410,56 +410,39 @@ header {
 
 }
 
-.carousel-container {
-  display: flex;
-  width: 100%;
-  transition: transform 0.3s ease-in-out;
-}
-
-.carousel-item {
+.owl-theme img {
   width: 100vw;
-}
-
-.carousel-item img {
-	width: 100%;
   aspect-ratio: 2/0.9;
+  object-fit: cover;
 }
 
-.carousel-pagination {
-  display: flex;
-  justify-content: center;
-  gap: 1em;
+.owl-dots {
   position: absolute;
-  bottom: 1em;
-  left: 50vw;
-  transform: translateX(-50%);
-}
-
-.carousel-pagination-button {
-  background-color: #fffdfd;
-  border: none;
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  cursor: pointer;
-}
-
-.carousel-pagination-button.active {
-  background-color: #000000;
-  border: solid 1px #fff;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 
-@media (max-width: 1000px){
-  .carousel-item img {
-        aspect-ratio: 2/1.2;
-    }
+@media (max-width: 800px) {
+  .owl-theme img {
+    aspect-ratio: 1/0.7;
+  }
 }
 
 @media (max-width: 600px){
-  .carousel-item img {
-        aspect-ratio: 2/1.9;
-    }
+  .owl-theme img {
+    aspect-ratio: 1/0.9;
+  }
+}
+
+@media (max-width: 400px){
+  .owl-theme img {
+    aspect-ratio: 1/1.2;
+  }
+  .home-intro p {
+    top: 40%;
+  }
 }
 
 .paddingblock {
